@@ -5,6 +5,7 @@
 Version 1.1.6 to be released
 ----------------------------
 - Bug #1775: Fixed the bug that AR and Gii may fail for tables not in default schema in Oracle DB (Qiang)
+- Enh #1785: Added CAssetManager::$excludeFiles property to support exclusion of irrelevant files from the publishing process (Y!!)
 - New: Added query builder (Qiang)
 
 Version 1.1.5 November 14, 2010
